[package]
name = "rustplus"
version = "0.2.3"
edition = "2024"
description = "Rust+ protocol client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nodirust/nodirust"
keywords = ["rustplus", "protocol", "client"]
categories = ["network-programming"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
prost.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
http.workspace = true

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.0"
